Commit #3 : Bootstrap 4 beta version added !

--- a/survay-feedback/src/app/app.component.html
+++ b/survay-feedback/src/app/app.component.html
@@ -1,14 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <img width="300" src="https://static1.squarespace.com/static/57cde36e2994ca4d3c1de081/57db19a9bebafb407ca42be1/57db19c4ebbd1a047885f82a/1474926336449/logo-black+%283%29.png?format=500w">
+<div class="jumbotron" style="text-align:center">
+  <h1 class="display-3"> <i class="fa fa-flag" aria-hidden="true"></i> {{title}} Started!</h1>
+  <p class="lead"><img width="300" src="https://static1.squarespace.com/static/57cde36e2994ca4d3c1de081/57db19a9bebafb407ca42be1/57db19c4ebbd1a047885f82a/1474926336449/logo-black+%283%29.png?format=500w">
+  </p>
+  <hr class="my-4">
+  <h2><p>Here is the link to help you start:</p></h2>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://github.com/meta-gourav-gandhi/survey-project" role="button">GitHub Link</a>
+  </p>
 </div>
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h2><a target="_blank" href="https://github.com/meta-gourav-gandhi/survey-project">Project GitHub Link</a></h2>
-  </li>
-</ul>
-
