--- a/survay-feedback/src/app/app.component.css
+++ b/survay-feedback/src/app/app.component.css
@@ -1,20 +1,23 @@
-.example-fill-remaining-space {
-    // This fills the remaining space, by using flexbox. 
-    // Every toolbar row uses a flexbox row layout.
-    display: flex;
-    flex: 1 1 auto;
-  }
+.custom-navbar{
+    border-radius: 0px;
+    background: #009cdb;
+    border: 0px;
+}
 
-  .example-button-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-
-  .custom-nav-hover{
-      transition: background-color 0.7s;
-  }
-  .custom-nav-hover:hover{
-    background-color: #ff4081;
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
     color: white;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: white;
+}
+
+ 
+.footer {
+    position: relative;
+    bottom:0;
+    width: 100%;
+    padding: 1% 0% 1% 0%;
+    color: white;
+    text-align: center;
   }
