--- a/survay-feedback/src/styles.css
+++ b/survay-feedback/src/styles.css
@@ -1,2 +1,61 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 /* You can add global styles to this file, and also import other style files */
+html {
+    overflow: auto;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 5px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #009cdb; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: #009cdb; 
+}
+
+body {
+    font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;  
+    background: #F5F5F5;  
+}
+
+.primary {
+    background: #009cdb;
+    color: white;
+}
+
+.secondary{
+    background: #9E9E9E;
+    color: white;
+}
+
+.margin-top-5 {
+    margin-top: 5%;
+  }
+
+.btn-success {
+    background : #009cdb;
+    border: 0px;
+  }
+
+  .btn-success:hover {
+    background : #07ABEC;
+    border: 0px;
+  }
+
+.btn{
+    width: 30%;
+    border-radius: 0px;
+}
