Front End Code Until Do Survey

--- a/survay-feedback/src/app/app.component.html
+++ b/survay-feedback/src/app/app.component.html
@@ -1,10 +1,17 @@
 <nav class="navbar navbar-inverse custom-navbar">
         <div class="container-fluid">
           <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+            </button>
+            <a class="navbar-brand" routerLink="/home"><img src="../assets/logo.png" style="width:40px;height:40px;position:relative;top:-35%;" class="img-responsive"/></a>
             <a class="navbar-brand" routerLink="/home">WeSurve</a>
           </div>
-          <ul class="nav navbar-nav">
-            <li class="secondary"><a routerLink="/home">Home</a></li>
+          <div class="collapse navbar-collapse" id="myNavbar">
+          <ul *ngIf="displayUser" class="nav navbar-nav">
+            <li><a routerLink="/dashboard">Dashboard</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li *ngIf="!displayUser else other_content"><a  routerLink="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -12,16 +19,17 @@
             <ng-template #other_content>
               <li data-toggle="dropdown"><a><span class="glyphicon glyphicon-user"></span> {{userName}} <span class="caret"></span></a></li>
                 <ul class="dropdown-menu">
-                    <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Edit Profile</a></li>
+                    <li><a href="/editProfile"><span class="glyphicon glyphicon-cog"></span> Edit Profile</a></li>
                     <li><a (click)="logout();"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
             </ng-template>
           </ul>
+        </div>
         </div>
       </nav>
 
   <router-outlet></router-outlet>
 
   <footer class="footer secondary">
-      &copy; by XYZ 2017-2019
+      Copyright &copy; 1999-2020 WeSurve
   </footer>
