--- a/survay-feedback/src/app/pages/home/home.component.html
+++ b/survay-feedback/src/app/pages/home/home.component.html
@@ -1,1 +1,54 @@
-Nothing to show
+<div class="jumbotron primary">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Make best decisions</h1> 
+            <h3>Get your questions answered!!</h3>
+            <div class="aboutUs">
+                <a class="btn secondary btn-lg text-primary" href="/home#about">About Us</a> 
+            </div>
+        </div>
+        <div class="col-md-6 text-right">
+            <img src="../assets/surveyy.png"/>
+        </div>
+    </div>
+</div>
+<div id="section2" class="text-center">
+    <h1>Easily create, send, and analyze surveys</h1>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="section2 section21">
+                <h1>1</h1>
+                <h2>Ask the right question</h2>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="section2 section22">
+                    <h1>2</h1>
+                    <h2>Reach the right people</h2>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="section2 section23">
+                    <h1>3</h1>
+                    <h2>Get meaningful insights</h2>
+            </div>
+        </div>
+
+    </div>
+</div>
+<div id="section2" class="text-center">
+    <h1>About Us</h1>
+</div>
+<div class="container" id="about">
+        <div class="row">
+            <div class="col-md-12 padding-5">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum ullamcorper lacus sit amet commodo. Fusce nec justo dui. Nam interdum mattis aliquet. In ornare ipsum ut sem faucibus consectetur. Fusce et cursus turpis. Mauris imperdiet vel justo ac varius. Mauris dapibus felis et molestie tincidunt. Nulla at laoreet nisi. Phasellus libero ex, pretium vel maximus sit amet, egestas vel nulla. Sed laoreet, velit nec convallis lacinia, odio erat bibendum lectus, quis vehicula lacus eros a lacus. Suspendisse nec neque nec urna bibendum aliquam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum ullamcorper lacus sit amet commodo. Fusce nec justo dui. Nam interdum mattis aliquet. In ornare ipsum ut sem faucibus consectetur. Fusce et cursus turpis. Mauris imperdiet vel justo ac varius. Mauris dapibus felis et molestie tincidunt. Nulla at laoreet nisi. Phasellus libero ex, pretium vel maximus sit amet, egestas vel nulla. Sed laoreet, velit nec convallis lacinia, odio erat bibendum lectus, quis vehicula lacus eros a lacus. Suspendisse nec neque nec urna bibendum aliquam.</p>
+            </div>
+        </div>
+</div>
+
