--- a/survay-feedback/src/app/app.component.css
+++ b/survay-feedback/src/app/app.component.css
@@ -2,6 +2,10 @@
     border-radius: 0px;
     background: #009cdb;
     border: 0px;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
 
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
@@ -16,7 +20,8 @@
 .footer {
     position: relative;
     bottom:0;
-    width: 100%;
+    right: 0;
+    left: 0;
     padding: 1% 0% 1% 0%;
     color: white;
     text-align: center;
