--- a/survay-feedback/src/app/pages/login/login.component.css
+++ b/survay-feedback/src/app/pages/login/login.component.css
@@ -1,10 +1,12 @@
-
+a{
+  text-decoration: none;
+}
 
   
   .box {
-    margin-top : 2%;
+    margin-top : 7%;
     background : white;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    /*box-shadow: 0px 0px 10px rgba(0,0,0,0.5);*/
     padding-bottom: 3%;
   }
 
@@ -17,17 +19,12 @@
     border: 0px;
     background: #009cdb;
     color: white;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    /*box-shadow: 0px 0px 10px rgba(0,0,0,0.5);*/
     font-size: 20px;
   }
 
   .row {
     margin-bottom: 5%;
-  }
-
-  .divider {
-     border-bottom : 1px solid #cccccc; 
-     margin: 5% 0% 2% 0%;
   }
 
   .divider-text{
@@ -63,3 +60,15 @@
     position: relative;
     left: 0;
   }
+
+  .glyphicon-ok{
+    color: green;
+  }
+
+  .glyphicon-remove{
+    color: #c07473;
+  }
+
+
+
+  
